# openoscamp-2025s

./: .envrc  .gitignore  .rustfmt.toml  .typos.toml  Cargo.toml  Makefile  README.md  crates.js  flake.nix  help.html  pyproject.toml  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/workflows/: cicd.yaml
blogs/: final-report-blog.md  final-report.md  learning-materials.md  random-thoughts.md  stage2-report.md  stage3-report.md  stage4-report.md
common/: Cargo.toml
common/src/: lib.rs
criterion/ipc_benchmark/report/: index.html
criterion/report/: index.html
evering/: Cargo.toml  all.html  index.html  sidebar-items.js
evering-threaded/: Cargo.toml
evering-threaded/src/: main.rs  op.rs  reactor.rs
evering/driver/: index.html  sidebar-items.js  struct.Driver.html  struct.OpId.html  trait.DriverHandle.html
evering/op/: index.html  sidebar-items.js  struct.Cancellation.html  struct.Op.html  trait.Completable.html
evering/resource/: index.html  sidebar-items.js  trait.Resource.html  trait.ResourceMut.html
evering/src/: driver.md  driver.rs  lib.md  lib.rs  op.md  op.rs  queue.rs  resource.md  resource.rs  uring.md  uring.rs
evering/uring/: enum.UringEither.html  index.html  sidebar-items.js  struct.Builder.html  struct.DisposeError.html  struct.Drain.html  struct.Header.html  struct.Queue.html  struct.RawUring.html  struct.UringA.html  struct.UringB.html  trait.Uring.html  type.Receiver.html  type.Sender.html
evering_ipc/: all.html  index.html  sidebar-items.js  struct.Error.html  type.ClientUring.html  type.Result.html  type.ServerUring.html  type.ShmHeader.html  type.UringBuilder.html
evering_ipc/op/: enum.RqeData.html  enum.SqeData.html  fn.exit.html  fn.ping.html  index.html  sidebar-items.js  struct.Pong.html  struct.Rqe.html  struct.Sqe.html
evering_ipc/runtime/: index.html  sidebar-items.js  struct.Runtime.html  struct.RuntimeHandle.html
evering_ipc/shm/: fn.init_client.html  fn.init_server.html  index.html  sidebar-items.js  struct.Allocator.html  struct.ShmBox.html  struct.ShmHeader.html  struct.ShmToken.html
evering_ipc/shm/boxed/: fn.init_client.html  fn.init_server.html  struct.ShmBox.html
evering_threaded/: all.html  fn.main.html  index.html  sidebar-items.js
evering_threaded/op/: enum.RqeData.html  enum.SqeData.html  fn.exit.html  fn.ping.html  index.html  sidebar-items.js  struct.Exit.html  struct.Op.html  struct.Ping.html  struct.Rqe.html  struct.Sqe.html
evering_threaded/reactor/: constant.CX.html  index.html  sidebar-items.js  struct.DriverRef.html  struct.Reactor.html  struct.ReactorHandle.html  struct.ReactorInner.html
evering_threaded/runtime/: constant.CX.html  index.html  sidebar-items.js  struct.Runtime.html  struct.RuntimeHandle.html  type.RuntimeInner.html  type.Sender.html
evering_utils/: all.html  index.html
evering_utils/runtime/: index.html  sidebar-items.js  struct.DriverRef.html  struct.ExecutorRef.html  struct.RunOn.html  struct.Runtime.html  trait.RuntimeHandle.html
examples/evering-ipc/: Cargo.toml
examples/evering-ipc/benches/: ping_pong.rs
examples/evering-ipc/benches/ping_pong/: epoll.rs  evering.rs  io_uring.rs  shmipc.rs
examples/evering-ipc/src/: lib.rs  main.rs  op.rs  reactor.rs  runtime.rs  shm.rs
examples/evering-ipc/src/shm/: boxed.rs
examples/evering-threaded/: Cargo.toml
examples/evering-threaded/src/: main.rs  op.rs  reactor.rs  runtime.rs
examples/evering-utils/: Cargo.toml
examples/evering-utils/src/: lib.rs  reactor.rs  runtime.rs
examples/ipc-benchmark/: Cargo.toml  README.md
examples/ipc-benchmark/src/: bench.rs  epoll.rs  evering.rs  io_uring.rs  monoio.rs  monoio_uring.rs  shmipc.rs  tokio_epoll.rs  tokio_uring.rs  utils.rs
ipc_benchmark/: all.html  index.html
kernel/: Cargo.toml  build.rs
kernel/src/: asm.rs  boot.rs  config.rs  console.rs  logging.rs  main.rs  mm.rs  sbi.rs  syscall.rs  task.rs  trap.rs  utils.rs
kernel/src/mm/: page_table.rs
kernel/src/trap/: entry.rs
local-executor/: Cargo.toml
local-executor/src/: executor.rs  lib.rs  main.rs  task.rs
local_executor/: all.html  fn.spawn.html  fn.yield_now.html  index.html  sidebar-items.js  struct.Executor.html  struct.Task.html  trait.ExecutorHandle.html
local_executor/executor/: fn.spawn.html  fn.yield_now.html  struct.Executor.html  trait.ExecutorHandle.html
local_executor/task/: struct.Task.html
scripts/: kernel.ld  make_diagrams.py
search.desc/evering/: evering-desc-0-.js
search.desc/evering_ipc/: evering_ipc-desc-0-.js
search.desc/evering_threaded/: evering_threaded-desc-0-.js
search.desc/evering_utils/: evering_utils-desc-0-.js
search.desc/ipc_benchmark/: ipc_benchmark-desc-0-.js
search.desc/local_executor/: local_executor-desc-0-.js
src/: crawler.rs  executor.rs  main.rs  task.rs
src/evering/: driver.rs.html  lib.rs.html  op.rs.html  resource.rs.html  uring.rs.html
src/evering_ipc/: lib.rs.html  op.rs.html  runtime.rs.html  shm.rs.html
src/evering_ipc/shm/: boxed.rs.html
src/evering_threaded/: main.rs.html  op.rs.html  reactor.rs.html  runtime.rs.html
src/evering_utils/: lib.rs.html  runtime.rs.html
src/ipc_benchmark/: lib.rs.html
src/local_executor/: executor.rs.html  lib.rs.html  task.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/evering/driver/: trait.DriverHandle.js
trait.impl/evering/op/: trait.Completable.js
trait.impl/evering/resource/: trait.ResourceMut.js
trait.impl/evering_utils/runtime/: trait.RuntimeHandle.js
trait.impl/local_executor/executor/: trait.ExecutorHandle.js
type.impl/core/result/: enum.Result.js
user/: Cargo.toml  build.rs  linker.ld
user/src/: console.rs  lib.rs  syscall.rs
(+353 files in other folders)
