[workspace]
members = ["evering", "local-executor", "examples/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Loi Chyan <loichyan@foxmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
evering = { path = "evering" }
fastrand = "2.3.0"
local-executor = { path = "local-executor" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
