[workspace]
members = ["evering", "local-executor", "examples/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Loi Chyan <loichyan@foxmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
bytesize = "2.0.1"
evering = { path = "evering" }
evering-utils = { path = "examples/evering-utils" }
fastrand = "2.3.0"
local-executor = { path = "local-executor" }
nix = "0.30.1"
pin-project-lite = "0.2.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.bench]
debug = true
# opt-level = 3
# lto = true
# codegen-units = 1
