[project]
name = "openoscamp-2025s"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pandas-stubs>=2.2.3.250527",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
pythonVersion = "3.12"
reportAny = false
reportExplicitAny = false
reportIgnoreCommentWithoutRule = false
reportUnknownMemberType = false
reportUnusedCallResult = false
