[package]
name = "evering-ipc"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
local-executor.workspace = true
evering.workspace = true
evering-utils.workspace = true
fastrand.workspace = true
pin-project-lite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rlsf = "0.2.1"
bytesize = "2.0.1"

[dependencies.argh]
version = "0.1.13"
default-features = false
features = ["help"]

[dependencies.nix]
version = "0.30.1"
features = ["fs", "mman"]

[dev-dependencies]
criterion = "0.6.0"
tokio = { version = "1.45.1", features = [
    "io-util",
    "macros",
    "net",
    "rt",
    "sync",
] }

[[bench]]
name = "ping_pong"
harness = false
