[package]
name = "evering-ipc"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bytesize.workspace = true
evering.workspace = true
evering-utils.workspace = true
fastrand.workspace = true
local-executor.workspace = true
pin-project-lite.workspace = true
rlsf = "0.2.1"
tracing-subscriber.workspace = true
tracing.workspace = true

[dependencies.argh]
version = "0.1.13"
default-features = false
features = ["help"]

[dependencies.nix]
workspace = true
features = ["fs", "mman"]
